--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/cookie-pop/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="餅乾跳, Cookie Pop, Cookie Consent,cookie-pop, 網站隱私政策, 網站工具, 隱私保護, 網站合規, Cookie 工具" />
-    <title>餅乾跳 Cookie Pop!</title>
+    <meta name="keywords" content="餅乾蹦!, Cookie Pop!, Cookie Consent, 網站隱私政策, 網站工具, 隱私保護, 網站合規, Cookie 工具" />
+    <title>餅乾蹦 Cookie Pop!</title>
   </head>
   <body>
     <div id="app"></div>
