--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/cookie-pop/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="餅乾蹦!, Cookie Pop!, Cookie Consent, 網站隱私政策, 網站工具, 隱私保護, 網站合規, Cookie 工具" />
+    <meta name="google-site-verification" content="g0_7EkpZx76hjgpVNnUOydXRnvz9UzzbhfQkGzk-0gk" />
     <title>餅乾蹦 Cookie Pop!</title>
   </head>
   <body>
